--- a/web-app/sample-uwsgi.ini
+++ b/web-app/sample-uwsgi.ini
@@ -6,7 +6,7 @@ callable = app
 master = true
 processes = 5
 
-socket = /tmp/uwsgi.sock
+socket = 0.0.0.0:8000
 
 chown-socket = www-data:www-data
 
